# fastapi-pg-template

./: .gitignore  README.md  main.py  pyproject.toml  server.py  server_with_db.py
package/: main.py
postgres/: docker-compose.yml  servers.json
