[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
fastapi = {extras = ["standard"], version = "^0.115.2"}
black = "^24.10.0"
asyncio = "^3.4.3"
sqlmodel = "^0.0.22"
requests = "^2.32.3"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
